2010-07-29  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m.el (autoload, w3m-linknum-map):
	`w3m-linknum-bookmark-add-this-url', `w3m-linknum-zoom-in-image'
	and `w3m-linknum-zoom-out-image' added.

	* w3m-lnum.el (w3m-link-numbering-mode-map):
	`w3m-linknum-bookmark-add-this-url', `w3m-linknum-zoom-in-image'
	and `w3m-linknum-zoom-out-image' added.
	(w3m-link-numbering-mode, w3m-with-linknum)
	(w3m-linknum-get-action): Use `zerop'.
	(w3m-link-numbering): Simplify argument list and checks assosiated
	with it.
	(w3m-read-int-interactive): Add <escape> for quit.
	(w3m-linknum-follow): Add position to history when visiting url in
	curent page.  Change message when no valid anchor is selected.
	(w3m-linknum-view-image, w3m-linknum-save-image): Rewrite using
	`cond'.
	(w3m-linknum-zoom-image): New macro.
	(w3m-linknum-zoom-in-image, w3m-linknum-zoom-out-image)
	(w3m-linknum-bookmark-add-this-url): New functions.

2010-07-25  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-auto-show): Guard error if this-command is not a symbol.
	Thanks to IRIE Shinsuke san. cf. [emacs-w3m:11282]

2010-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Save positions iff called interactively.
	(w3m-goto-url-new-session): Save positions.

	* w3m-bookmark.el (w3m-bookmark-view): Save positions.

	* w3m-hist.el (w3m-history-copy): Copy positions.

2010-07-13  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el (w3m-link-numbering-mode): Using `buffer-list' instead of
	`w3m-list-buffers' as the latter does unnecessary stuff.
	(w3m-linknum-read-url): Removed. It's now equivalent to:
	(car (w3m-linknum-get-action prompt 1))
	(w3m-linknum-toggle-inline-image): If no url under selected image,
	move over it and toggle it.
	(w3m-linknum-external-view-this-url, w3m-linknum-edit-this-url):
	Using `w3m-linknum-get-action' instead of `w3m-linknum-read-url'.

	* w3m.el (autoload): Added `w3m-link-numbering-mode', removed
	`w3m-linknum-read-url'.
